--- a/lot/index.html
+++ b/lot/index.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>tuser sen how are you ?/</p>
-    <h1> sjfsdjfsdfkljsd</h1>
-    <h4>o5joor iijl kdjls lsijl slor </h4>
+    <h1>iii fiei iffdieoid  iieir dipuk lfjndifi fifode9seijj idui dfswl;pwjdjif </h1>
 </body>
 </html>
